[project]
name = "discord-todo-bot-for-japanese"
version = "0.1.0"
description = "Japanese-language Discord ToDo bot"
authors = [
    {name = "QuQuLa89"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "discord-py (>=2.3.2,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[tool.poetry]
packages = [{include = "todo_bot"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.8.0,<7.0.0)",
    "pytest (>=8.0,<9.0)"
]
